[gd_scene load_steps=4 format=3 uid="uid://darp8jeo742ov"]

[ext_resource type="Script" path="res://Main folder/Minigames folder/minigames_9.gd" id="1_bpof6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6g2kd"]
bg_color = Color(0.393086, 0.393086, 0.393085, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g70se"]
bg_color = Color(0.13911, 0.681648, 0, 1)

[node name="WhackAMole" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bpof6")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -79.0
offset_right = 79.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Mole1" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="Mole2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="Mole3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="Mole4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="Mole5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="Mole6" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="Mole7" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="Mole8" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="Mole9" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6g2kd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g70se")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 74.0
grow_horizontal = 2

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MissLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MoleTimer" type="Timer" parent="."]
autostart = true
